# Cally

./: .NOTES.jinja  .git-changelog.toml  .gitignore  README.md  cally.code-workspace  commitlint.config.js  pyproject.toml
.github/workflows/: build-providers.yaml  build-tool-cache.yaml  commitlint.yaml  coverage-build.yaml  coverage-report.yaml  coverage.yaml  release-cally.yaml  test-cally.yaml  test-examples.yaml
cally/: __init__.py  cli.py
cally/cdktf/: __init__.py
cally/cdktf/stacks/: __init__.py
cally/commands/: __init__.py  provider.py  tf.py
cally/tools/: provider.py  terraform.py
docs/: Makefile  Pipfile  api.rst  cdk.rst  cli.rst  concepts.rst  conf.py  configuration.rst  index.rst  why.rst
src/cally/cdk/: __init__.py
src/cally/cdk/stacks/: __init__.py
src/cally/cli/: __init__.py  _version.py  constants.py  exceptions.py
src/cally/cli/commands/: config.py  tf.py
src/cally/cli/config/: __init__.py  config_types.py  environment.py  loader.py  mixins.py  options.py  service.py  terraform_service.py  types.py  validators.py
src/cally/cli/config/loaders/: __init__.py  environment.py  service.py
src/cally/cli/tools/: terraform.py
src/cally/testing/: __init__.py  constants.py  exceptions.py
tests/: __init__.py  test_testing.py
tests/cdktf/: __init__.py
tests/cli/: __init__.py  test_config.py  test_idp.py  test_tf.py
tests/cli/config/: __init__.py  test_config.py  test_idp.py  test_types.py
tests/stacks/: test_cally.py  test_idp.py  test_providers.py  test_resources.py
tests/testdata/cdk/: empty_synth.json  gcs_backend.json  provider_load.json
tests/testdata/cdktf/: empty_synth.json
tests/testdata/cli/: empty_print.json
tests/testdata/config/: defaults.yaml  mixins.yaml  validation.yaml
tests/testdata/test_cls/cally/idp/: defaults.py
tests/testdata/test_cls/cally/idp/commands/: example.py
tests/testdata/test_cls/cally/idp/stacks/: minimal.py
tests/testdata/testing/: no_testdata.py
tests/tools/: test_provider.py
